Attempt LinkedIn Button1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Ibrahim Rasheed</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -24,8 +24,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Ibrahim A. Rasheed</h1>
+							<p>Hi! My name is Ibby and welcome to my page!</p>
 						</header>
 						<!--
 						<hr />
@@ -69,6 +69,7 @@
 								<li><a href="#" class="fa-twitter">Twitter</a></li>
 								<li><a href="#" class="fa-instagram">Instagram</a></li>
 								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="#" class="fa-linkedin">LinkedIn</a></li>
 							</ul>
 						</footer>
 					</section>
