--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/screenshot.jpg" alt="" /></span>
 							<h1>Ibrahim A. Rasheed</h1>
 							<p>Hi! My name is Ibby and welcome to my page!</p>
 						</header>
@@ -68,8 +68,8 @@
 							<ul class="icons">
 								<li><a href="#" class="fa-twitter">Twitter</a></li>
 								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
-								<li><a href="#" class="fa-linkedin">LinkedIn</a></li>
+								<li><a href="https://www.facebook.com/irasheed" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://www.linkedin.com/in/ibrahim-rasheed-59830aa8/" class="fa-linkedin">LinkedIn</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -77,7 +77,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Ibrahim A. Rasheed</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
