Return avatar to default

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.png" alt="" /></span>
+							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Ibrahim A. Rasheed</h1>
 							<p>Hi! My name is Ibby and welcome to my page!</p>
 						</header>
