--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://github.com/iarashee" class="fa-github">GitHub</a></li>
 								<li><a href="https://www.facebook.com/irasheed" class="fa-facebook">Facebook</a></li>
 								<li><a href="https://www.linkedin.com/in/ibrahim-rasheed-59830aa8/" class="fa-linkedin">LinkedIn</a></li>
 							</ul>
