--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<ul class="icons">
 								<li><a href="https://github.com/iarashee" class="fa-github">GitHub</a></li>
 								<li><a href="https://www.linkedin.com/in/ibrahim-rasheed-59830aa8/" class="fa-linkedin">LinkedIn</a></li>
-								<li><a href="hhttps://www.goodreads.com/user/show/21451592-ibrahim-rasheed" class="fa-goodreads">Goodreads</a></li>
+								<li><a href="hhttps://www.goodreads.com/user/show/21451592-ibrahim-rasheed" class="fa-book">Goodreads</a></li>
 								<li><a href="https://www.facebook.com/irasheed" class="fa-facebook">Facebook</a></li>
 							</ul>
 						</footer>
