--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/iarashee" class="fa-git">GitHub</a></li>
+								<li><a href="mailto:iarashee@umich.edu" class="fa-envelope-o">Facebook</a></li>
 								<li><a href="https://www.linkedin.com/in/ibrahim-rasheed-59830aa8/" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://www.goodreads.com/user/show/21451592-ibrahim-rasheed" class="fa-book">Goodreads</a></li>
-								<li><a href="mailto:iarashee@umich.edu" class="fa-envelope-o">Facebook</a></li>
+								<li><a href="https://drive.google.com/open?id=1F6GoDJdwhpZiOMGvyudG98amEClirkVmKJn6TwWo6Fo" class="fa-briefcase">CV and Projects</a></li>
 							</ul>
 						</footer>
 					</section>
