Added text to direct to CV and projects

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 							<span class="avatar"><img src="images/avatar2.jpg" alt="Avatar" /></span>
 							<h1>Ibrahim A. Rasheed</h1>
 							<p>Hi! My name is Ibby and welcome to my page!</p>
+							<p><i>Please click the briefcase icon to view my CV and projects</i></p> 
 						</header>
 						<!--
 						<hr />
