--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar2.jpg" alt="Avatar" /></span>
 							<h1>Ibrahim A. Rasheed</h1>
-							<p>Hi! My name is Ibby and welcome to my page!</p>
+							<p>Hi, my name is Ibby and welcome to my page!</p>
 							<p><i>Please click the briefcase icon to view my CV and projects</i></p> 
 						</header>
 						<!--
