--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/iarashee" class="fa-git">GitHub</a></li>
-								<li><a href="https://drive.google.com/open?id=0B5tQ5leBiSiCWVJ4N29WckVpOVk" class="fa-briefcase">CV and Projects</a></li>
+								<li><a href="iarashee.github.io/supplements/Ibrahim Rasheed CV.pdf" class="fa-briefcase">CV and Projects</a></li>
 								<li><a href="https://www.linkedin.com/in/ibrahim-rasheed-59830aa8/" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://www.goodreads.com/user/show/21451592-ibrahim-rasheed" class="fa-book">Goodreads</a></li>
 								<li><a href="mailto:iarashee@umich.edu" class="fa-envelope-o">Facebook</a></li>
