--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset = "utf-8">
 	<title>ICE-HTML1</title>
-	<link href="http://icons.iconarchive.com/icons/shiftercat/rose/256/Rose-Cerise-icon.png" type="icon" rel="icon">
+	<link href="http://icons.iconarchive.com/icons/shiftercat/rose/256/Rose-Cerise-icon.png" rel="icon">
 </head>
 
 <header>
