--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset = "utf-8">
 	<title>ICE-HTML1</title>
-	<link href="http://icons.iconarchive.com/icons/sbstnblnd/plateau/256/Apps-aqualung-icon.png" type="icon" rel="icon">
+	<link href="http://icons.iconarchive.com/icons/sbstnblnd/plateau/256/Apps-aqualung-icon.png" type="image/x-icon" rel="icon">
 </head>
 
 <header>
@@ -35,15 +35,15 @@
 	<h4>Feel free to reach out!</h4>
 	<form action="mailto:iarashee@umich.edu" method="post" enctype="text/plain">
 		<label for="name">Name:</label>
-		<input type="text" name="name" id = "name"></label><br>
+		<label><input type="text" name="name" id = "name"></label><br>
 		<label for="dob">DOB:</label>
 		<input type="date" name="DOB" id = "dob"><br>
 
 		<label for="email">Email:</label>
-		<input type="text" name="email" id = "email"></label><br>
+		<label><input type="text" name="email" id = "email"></label><br>
 
 		<label for="phone">Phone:</label>
-		<input type="tel" name="phone" id = "phone"></label><br>
+		<label><input type="tel" name="phone" id = "phone"></label><br>
 
 		Please enter your preffered method of contact:<br>
 		<label><input type="radio" name="method" value="email"> Email</label><br>
