updated with rubric

--- a/ICE1/index.html
+++ b/ICE1/index.html
@@ -30,7 +30,30 @@
 	<h4>Journal:</h4>
 		<p>January 14th, 2018</p>
 		<p>I've realized the rare opportunities when my entire day is free could be stressful as well. This is because I have to make the active choice of what work or activiites to prioritize and then tell myself, "Wow! I had the whole day free and I accomplished a lot!" So today, I woke up naturally about 10am and read my book from my bed. About 12pm, I had "breakfast" and then made my way down to the Law Library where I *actually* did my readings for my upcoming classes! At 6:30pm, I went to my org's Marketing Lockdown, where we all sat on our computers and tried to recruit people for our upcoming conference. Lastly, at 11pm, my roommate and I ordered food and watched Moana. I'm happy to say this day was staightforward and I feel satisfied for not only doing my work, but hanging out with my friends and roommate too! :)</p>
-	
+
+	<h4>Testing</h4>
+		<ol>
+			<li>Validating passed with no errors, except for one warning which states the date might not be supported on all browsers.</li>
+			<li>The Google Chrome interface is what's "normal" for me. On Google Chrome, the DOB form had a drop-down for dates whereas in Firefox and Safari there was none.</li>
+			<li>I adjusted my code so the form fields would focus once the text next to it is clicked on. This is important for accessibility and user experience purposes so that the user can see where to enter the corresponding text; it can be difficult to find the right place when there's many more forms and boxes.</li>
+		</ol>
+
+	<h4>Click the button below today's quote of the day!</h4>
+	<form>
+		<button formaction="https://www.brainyquote.com/quote_of_the_day" type="submit">Today's Quote!</button>
+	</form>
+
+	<p> One of my favorite quotes is from The Diary of Anne Frank (who I actually share my birthday with!):
+		<p>Saturday, 15th July 1944</p>
+		<blockquote><i>...In spite of everything I still believe that people are really good at heart. I simply can't build up my hopes on a foundation consisting of confusion, misery, and death. I see the world gradually being turned into a wilderness, I hear the ever approaching thunder, which will destroy us too, I can feel the sufferings of millions and yet, if I look up into the heavens, I think that it will all come right, that this cruelty too will end, and that peace and tranquillity will return again.</i></blockquote>
+	</p>
+
+	<h4>While you're here, check out my awesome friends' sites too!</h4>
+	<nav>
+		<a href="https://mchy8.github.io/ICE-1/">Mackenzie!</a>
+		<a href="https://sabinehutter.github.io/">Sabine!</a>
+	</nav>
+
 	<h4>Feel free to reach out!</h4>
 	<form action="mailto:iarashee@umich.edu" method="post" enctype="text/plain">
 		<label for="name">Name:</label>
@@ -54,16 +77,6 @@
 		<input type="reset" value="Reset">
 	</form>
 
-	<h4>Click the button below today's quote of the day!</h4>
-	<form>
-		<button formaction="https://www.brainyquote.com/quote_of_the_day" type="submit">Today's Quote!</button>
-	</form>
-
-	<h4>While you're here, check out my awesome friends' sites too!</h4>
-		<nav>
-			<a href="https://mchy8.github.io/">Mackenzie!</a>
-			<a href="https://sabinehutter.github.io/">Sabine!</a>
-		</nav>
 </body>
 
 </html>
