big changes for progress

--- a/Portfolio/professional.html
+++ b/Portfolio/professional.html
@@ -7,8 +7,6 @@
 	<!--Style-->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
-	
-	
 
 </head>
 
@@ -23,33 +21,31 @@
        		</div>
 	       
 	       <ul>
-	            <li><a class="current-page" href="index.html">HOME</a></li>
-	            <li><a href="professional.html">Professional</a></li>
+	            <li><a href="index.html">HOME</a></li>
+	            <li><a class="current-page" href="professional.html">Professional</a></li>
 	            <li><a href="blog.html">Blog</a></li>
 	            <li><a href="contact.html">Contact</a></li>
 	        
 	        </ul>   
    		</nav>
 
+
 	</header>
+	<div id="main-content" class="main-content main-content-crafts">
+		
+		<div class="personal">
+			<h3><b>Name:</b> Ibrahim Abdur Rasheed</h3>
+			<h2><b>Email:</b> iarashee@umich.edu</h2>
+			<h2><b>Address:</b> 401 Thompson St</h2>
 
-	<div id="main-content" class="main-content main-content-home">
+
+		</div>
 		
-		<section class="home-flag">
-			
-			<p>Welcome!</p>
-			<p>My name is Ibrahim and I'm a senior at the University of Michigan studying data analysis and medical anthroplogy. Please use the navigation to swift through pages and learn about me!</p>
-		
-		</section>
 	</div>
-
-	<div id = "main-photo">
-		<img src="img/me.jpg" alt = "me pic" style = "width:500px;height:600px;">
-	</div> 
-
+	
 	<footer class="footer">
 		<p>Made by Ibrahim Rasheed</p>
 	</footer>
-</body>
 
+</body>
 </html>
