--- a/Portfolio/blog.html
+++ b/Portfolio/blog.html
@@ -23,46 +23,27 @@
 	       <ul>
 	            <li><a href="index.html">HOME</a></li>
 	            <li><a href="professional.html">Professional</a></li>
-	            <li><a href="blog.html">Blog</a></li>
-	            <li><a class="current-page" href="contact.html">Contact</a></li>
+	            <li><a class="current-page" href="blog.html">Blog</a></li>
+	            <li><a href="contact.html">Contact</a></li>
 	        
 	        </ul>   
    		</nav>
 
 
 	</header>
-	<div id="main-content" class="main-content main-content-crafts">
-		
-		<!--Photo Gallery-->
-		
-		<section class="crafts">
-			
-			<h3>Feel free to reach out!</h3>
-			
-			<form action="mailto:iarashee@umich.edu" method="post" enctype="text/plain">
-				<label for="name">Name:</label>
-				<input type="text" name="name" id = "name"></label><br>
-				<label for="dob">DOB:</label>
-				<input type="date" name="DOB" id = "dob"><br>
-
-				<label for="email">Email:</label>
-				<input type="text" name="email" id = "email"></label><br>
-
-				<label for="phone">Phone:</label>
-				<input type="tel" name="phone" id = "phone"></label><br>
-
-
-		  		<label for= "comment">Please enter your message:</label><br>
-				<label><input type="text" name="comment" id="comment" size="50"></label><br>
-				<input type="submit" value="Send">
-				<input type="reset" value="Reset">
-			
-			</form>
-		
-		</section>
 	
+	<div id="main-content" class="main-content main-content-crafts">
+
+	<div class= "post">
+		<h3 color = "yellow">Blog Title</h3>
+		<h2>Date: March 29, 2018</h2>
+		<h1> text, text, text <h1>
+		
+
+	</div>	
 	</div>
 	
+
 	<footer class="footer">
 		<p>Made by Ibrahim Rasheed</p>
 	</footer>
