--- a/Portfolio/Test2/contact.html
+++ b/Portfolio/Test2/contact.html
@@ -71,7 +71,7 @@
 	<header id="fh5co-header" role="banner">
 		<div class="container">
 			<div class="header-inner">
-				<h1><i class="sl-icon-energy"></i><a href="index.html">Lesser</a></h1>
+				<h1><i class="sl-icon-energy"></i><a href="index.html">Ibrahim Rasheed</a></h1>
 				<nav role="navigation">
 					<ul>
 						<li><a href="index.html">Home</a></li>
