--- a/Portfolio/Test2/index.html
+++ b/Portfolio/Test2/index.html
@@ -84,13 +84,13 @@
 		</div>
 	</header>
 	<div id="fh5co-intro-section">
-		<div class="container">
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h2>Lesser is a creative agency that love to create functional website</h2>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 	<div id="fh5co-featured-section">
 		<div class="container">
