--- a/Portfolio/Test2/books.html
+++ b/Portfolio/Test2/books.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Lesser &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+	<title>Books List</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -197,31 +197,6 @@
 					</div>
 				</div>
 
-
-
-
-				<!-- <div class="col-md-4 text-center">
-					<div class="blog-inner">
-						<img class="img-responsive" src="images/book7.jpg" alt="Blog"></a>
-						<div class="desc">
-							<h3>Throne of Glass</h3>
-							<p>by Sarah J. Maas</p>
-							<p><a href="https://www.goodreads.com/book/show/7896527-throne-of-glass" class="btn btn-primary btn-outline with-arrow">Goodreads<i class="icon-arrow-right"></i></a></p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<div class="blog-inner">
-								<img class="img-responsive" src="images/book8.jpg" alt="Blog">
-								<div class="desc">
-									<h3>Peak</h3>
-									<p>by Roland Smith</p>
-									<p><a href="https://www.goodreads.com/book/show/721003.Peak" class="btn btn-primary btn-outline with-arrow">Goodreads<i class="icon-arrow-right"></i></a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div> -->
 			</div>
 		</div>
 	</div>
