--- a/Portfolio/Test2/works.html
+++ b/Portfolio/Test2/works.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Ibrahim - Contact</title>
+	<title>Original Works</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -129,7 +129,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- <div id="map" data-animate-effect="fadeIn"></div> -->
+
 	<footer id="fh5co-footer" role="contentinfo">
 			
 			<div class="col-md-12 fh5co-copyright text-center">
