--- a/Portfolio/Test2/index.html
+++ b/Portfolio/Test2/index.html
@@ -118,7 +118,7 @@
 			<div class="row">
 				
 				<div class="col-md-6">
-					<div class="featured-grid" style="background-image: url(images/me3.jpg)";>
+					<div class="featured-grid" style="background-image: url(images/me3.jpg);">
 					</div>
 				</div>
 				
