--- a/Portfolio/Test2/blog.html
+++ b/Portfolio/Test2/blog.html
@@ -86,7 +86,7 @@
 						</li>
 						<li>
 							<div class="dropdown btn">
-  								<button class="dropbtn"><a href="blog.html">Blog</a></button>
+  								<button class="dropbtn">Blog</button>
 					  				<div class="dropdown-content">
 					    				<a href="blog.html">All Posts</a>
 					    				<a href="books.html">Books List</a>
