--- a/Portfolio/Test2/books.html
+++ b/Portfolio/Test2/books.html
@@ -86,7 +86,7 @@
 						</li>
 						<li>
 							<div class="dropdown btn">
-  								<button class="dropbtn"><a href="blog.html">Blog</a></button>
+  								<button class="dropbtn">Blog</button>
 					  				<div class="dropdown-content">
 					    				<a href="blog.html">All Posts</a>
 					    				<a href="books.html">Books List</a>
@@ -165,7 +165,7 @@
 				</div>
 				<div class="col-md-4 text-center">
 					<div class="blog-inner">
-						<img class="img-responsive" src="images/book5.jpg" alt="Blog"></a>
+						<img class="img-responsive" src="images/book5.jpg" alt="Blog">
 						<div class="desc">
 							<h3>City of Bones</h3>
 							<p>by Cassandra Clare</p>
@@ -209,6 +209,7 @@
 			
 	</footer>
 	</div>
+</div>
 
 	
 	
