--- a/Portfolio/Test2/blog.html
+++ b/Portfolio/Test2/blog.html
@@ -120,6 +120,29 @@
 				</div>
 			</div>
 
+				<div class="row">
+				<div class="col-md-12 blogborder">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="about-inner">
+								<img class="img-responsive" src="images/library.jpg" alt="About" height="400" width="300">
+								<h3>Pinned Posts</h3>
+								<h4>Date: April 6, 2018</h4>
+
+								<p>The two pinned posts are always being updated and can be found here:</p>
+									<ul>
+										<li><a href="books.html">Favorite Books & Recommendations</a></li>
+										<li><a href="works.html">Original Works</a></li>
+									</ul>
+
+								
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<div class="row">
 				<div class="col-md-12 blogborder">
 					<div class="row">
