--- a/ICE6/challenge1.html
+++ b/ICE6/challenge1.html
@@ -26,8 +26,8 @@ When you test your form at the moment, you'll notice that you can click on the c
 		/*    YOUR CODE HERE - check Step 1*/
     // window.alert("Yep, my function is being called");
     // var emailField = document.getElementById("#emailfield");
-    var emailField = document.getElementById("#emailfield");
-    var subscribe = document.getElementById("#subscribe").checked;
+    var emailField = document.getElementById("emailfield");
+    var subscribe = document.getElementById("subscribe");
 
     if (subscribe.checked) {
       emailField.style.display = "block";
