add photo + portfolio updates

--- a/Portfolio/Test2/books.html
+++ b/Portfolio/Test2/books.html
@@ -3,7 +3,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -86,19 +86,15 @@
 						</li>
 						<li>
 							<div class="dropdown btn">
-  								<button class="dropbtn">Blog</button>
+  								<button class="dropbtn dropbtn-active">Blog: Books List</button>
 					  				<div class="dropdown-content">
 					    				<a href="blog.html">All Posts</a>
-					    				<a href="books.html">Books List</a>
+					    				<!-- <a href="books.html">Books List</a> -->
 					    				<a href="works.html">Original Work</a>
 					  				</div>
 							</div>
 						</li>
-						<li>
-							<form>
-								<input class="btn active" type="button" value="Blog: Books" onclick="parent.location='books.html'" />
-							</form>
-						</li>
+						
 						<li>
 							<form>
 								<input class="btn" type="button" value="Contact" onclick="parent.location='contact.html'" />
@@ -121,7 +117,7 @@
 			<div class="row">
 				<div class="col-md-4 text-center">
 					<div class="blog-inner">
-						<img class="img-responsive" src="images/book1.jpg" alt="Blog">
+						<img class="img-responsive" src="images/book1.jpg" alt="Book1">
 						<div class="desc">
 							<h3>When Breath Becomes Air</h3>
 							<p>by Paul Kalanithi</p>
@@ -131,7 +127,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="blog-inner">
-								<img class="img-responsive" src="images/book2.jpg" alt="Blog">
+								<img class="img-responsive" src="images/book2.jpg" alt="Book2">
 								<div class="desc">
 									<h3>An Astronaut's Guide to Life on Earth</h3>
 									<p>by Col. Chris Hadfield</p>
@@ -143,7 +139,7 @@
 				</div>
 				<div class="col-md-4 text-center">
 					<div class="blog-inner">
-						<img class="img-responsive" src="images/book3.jpg" alt="Blog">
+						<img class="img-responsive" src="images/book3.jpg" alt="Book3">
 						<div class="desc">
 							<h3>Predictably Irrational: The Hidden Forces That Shape Our Decisions</h3>
 							<p>by Dan Ariely</p>
@@ -153,7 +149,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="blog-inner">
-								<img class="img-responsive" src="images/book4.jpg" alt="Blog">
+								<img class="img-responsive" src="images/book4.jpg" alt="Book4">
 								<div class="desc">
 									<h3>The Alchemist</h3>
 									<p>by Paulo Coelho</p>
@@ -165,7 +161,7 @@
 				</div>
 				<div class="col-md-4 text-center">
 					<div class="blog-inner">
-						<img class="img-responsive" src="images/book5.jpg" alt="Blog">
+						<img class="img-responsive" src="images/book5.jpg" alt="Book5">
 						<div class="desc">
 							<h3>City of Bones</h3>
 							<p>by Cassandra Clare</p>
@@ -175,7 +171,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="blog-inner">
-								<img class="img-responsive" src="images/book6.jpg" alt="Blog">
+								<img class="img-responsive" src="images/book6.jpg" alt="Book6">
 								<div class="desc">
 									<h3>The Emperor's Handbook: A New Translation of The Meditations</h3>
 									<p>by Marcus Aurelius; translation by C. Scot Hicks and David V. Hicks</p>
@@ -188,7 +184,7 @@
 				<div class="row">
 				<div class="col-md-4 text-center">
 					<div class="blog-inner">
-						<img class="img-responsive" src="images/book7.jpg" alt="Blog">
+						<img class="img-responsive" src="images/book7.jpg" alt="Book7">
 						<div class="desc">
 							<h3>Throne of Glass</h3>
 							<p>by Sarah J. Maas</p>
