--- a/Exam2/index.html
+++ b/Exam2/index.html
@@ -5,6 +5,8 @@
 	<title>Iarashee Exam 2</title>
 </head>
 <body>
-	
+	<h1>Ibrahim A. Rasheed</h1>
+	<img src="images/examPic.JPG" alt="colleen_exam">
+	<img src="images/UMSI-logo.jpg" alt="umsi_logo">
 </body>
 </html>
