--- a/Portfolio/Test2/blog.html
+++ b/Portfolio/Test2/blog.html
@@ -3,7 +3,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -86,21 +86,14 @@
 						</li>
 						<li>
 							<div class="dropdown btn">
-  								<button class="dropbtn">Blog</button>
+  								<button class="dropbtn dropbtn-active">Blog: All Posts</button>
 					  				<div class="dropdown-content">
-					    				<a href="blog.html">All Posts</a>
+					    				<!-- <a href="blog.html">All Posts</a> -->
 					    				<a href="books.html">Books List</a>
 					    				<a href="works.html">Original Work</a>
 					  				</div>
 							</div>
 						</li>
-
-						<li>
-							<form>
-								<input class="btn active" type="button" value="Blog: All Posts" onclick="parent.location='blog.html'" />
-							</form>
-						</li>
-
 
 						<li>
 							<form>
