--- a/Portfolio/Test2/index.html
+++ b/Portfolio/Test2/index.html
@@ -3,7 +3,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -139,120 +139,11 @@
 								</div>
 							</a>
 						</div>
-
-						<!-- <div class="col-md-6">
-							<a href="#" class="featured-grid featured-grid-2" style="background-image: url(images/image_8.jpg);">
-								<div class="desc">
-									<h3>Captured</h3>
-									<span>Photo</span>
-								</div>
-							</a>
-						</div> -->
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- <div id="fh5co-services-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Our Awesome Services</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 services-inner text-center">
-					<span><i class="sl-icon-graph"></i></span>
-					<h3>Finance Dashboard</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-				</div>
-				<div class="col-md-4 services-inner text-center">
-					<span><i class="sl-icon-heart"></i></span>
-					<h3>Made with Love</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-				</div>
-				<div class="col-md-4 services-inner text-center">
-					<span><i class="sl-icon-key"></i></span>
-					<h3>Help &amp; Support</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-				</div>
-
-			</div>
-		</div>
-	</div>
-	<div id="fh5co-blog-section" class="fh5co-grey-bg-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Our Recent Blog</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 text-center">
-					<div class="blog-inner">
-						<a href="#"><img class="img-responsive" src="images/image_4.jpg" alt="Blog"></a>
-						<div class="desc">
-							<h3><a href="#">New iPhone 6 Released</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Read More<i class="icon-arrow-right"></i></a></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 text-center">
-					<div class="blog-inner">
-						<a href="#"><img class="img-responsive" src="images/image_5.jpg" alt="Blog"></a>
-						<div class="desc">
-							<h3><a href="#">Start your day with a beautiful appearance</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Read More<i class="icon-arrow-right"></i></a></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 text-center">
-					<div class="blog-inner">
-						<a href="#"><img class="img-responsive" src="images/image_6.jpg" alt="Blog"></a>
-						<div class="desc">
-							<h3><a href="#">Bookmarksgrove right</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Read More<i class="icon-arrow-right"></i></a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="fh5co-client-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Our Happy Clients</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 text-center">
-					<div class="testimony">
-						<span class="quote"><i class="icon-quote-right"></i></span>
-						<blockquote>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<span>Athan Smith, via <a href="#" class="icon-twitter twitter-color"></a></span>
-						</blockquote>
-					</div>
-				</div>
-				<div class="col-md-6 text-center">
-					<div class="testimony">
-						<span class="quote"><i class="icon-quote-right"></i></span>
-						<blockquote>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<span>Athan Smith, via <a href="#" class="icon-google-plus googleplus-color"></a></span>
-						</blockquote>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
 	
 	<footer id="fh5co-footer" role="contentinfo">
 			
@@ -262,7 +153,6 @@
 			
 	</footer>
 	</div>
-	
 	
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
