--- a/Portfolio/Test2/works.html
+++ b/Portfolio/Test2/works.html
@@ -3,7 +3,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -88,18 +88,13 @@
 						</li>
 						<li>
 							<div class="dropdown btn">
-  								<button class="dropbtn"><a href="blog.html">Blog</a></button>
+  								<button class="dropbtn dropbtn-active">Blog: Original Work</a></button>
 					  				<div class="dropdown-content">
 					    				<a href="blog.html">All Posts</a>
 					    				<a href="books.html">Books List</a>
-					    				<a href="works.html">Original Work</a>
+					    				<!-- <a href="works.html">Original Work</a> -->
 					  				</div>
 							</div>
-						</li>
-						<li>
-							<form>
-								<input class="btn active" type="button" value="Blog: Original Work" onclick="parent.location='work.html'" />
-							</form>
 						</li>
 						<li>
 							<form>
@@ -123,7 +118,7 @@
 
 					<h3>Immortality at Islamic Shrines</h3>
 
-					<embed src="docs/shrines.pdf" type="application/pdf" width="100%" height="800">
+					<embed src="docs/shrines.pdf" type="application/pdf" width="600" height="800">
 
 				</div>
 			</div>
