--- a/Exam2/index.html
+++ b/Exam2/index.html
@@ -3,10 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Iarashee Exam 2</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	<h1>Ibrahim A. Rasheed</h1>
-	<img src="images/examPic.JPG" alt="colleen_exam">
-	<img src="images/UMSI-logo.jpg" alt="umsi_logo">
+	
+	<div class = "photo-grid">
+		
+		<div class = "left" id = "leftimg">
+			<img src="images/examPic.JPG" id="leftimg" alt="colleen_exam" style="visibility: visible">
+		</div>
+		
+		<div class = "right">
+			<img src="images/UMSI-logo.jpg" id="rightimg" alt="umsi_logo" style="visibility: visible">
+		</div>
+	
+	</div>
+
+	<button onclick="hide_image()">Hide Image</button>
+	<button onclick="show_image()">Show Image</button>
+
+
+
+	<script>
+	function hide_image() {
+    	var x = document.getElementById("leftimg");
+    	x.style.display = "none";
+    }
+    function show_image() {
+    	var x = document.getElementById("leftimg");
+    	x.style.display = "block";
+    }
+    </script>
+
 </body>
 </html>
